<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimary"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:contentDescription="@string/poster" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/pb"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:progressDrawable="@drawable/pb_drawable"
            android:max="100"
            android:background="@drawable/shape_circle"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/iv"
            app:layout_constraintBottom_toBottomOf="@id/iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            style="@style/Text.NumberTitle"
            android:id="@+id/tv_pb"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/progress_template"
            app:layout_constraintTop_toTopOf="@id/pb"
            app:layout_constraintBottom_toBottomOf="@id/pb"
            app:layout_constraintStart_toStartOf="@id/pb"
            app:layout_constraintEnd_toEndOf="@id/pb"/>

        <TextView
            style="@style/Text.Title"
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/title"
            app:layout_constraintTop_toBottomOf="@id/pb"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv"
            app:layout_constraintEnd_toEndOf="@id/iv"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"/>

        <TextView
            style="@style/Text.Desc"
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/release_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/iv"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/iv"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>